--- a/modelliniowyprognozowanie.html
+++ b/modelliniowyprognozowanie.html
@@ -520,6 +520,7 @@ wp</code></pre>
 ## 1  7.556598 15.62562
 ## 2  9.724919 17.80635
 ## 3 11.774611 19.92265</code></pre>
+<p>Innymi słowymi, z prawodpodobieństwem 95% wyniki sprzedaży są zwarte w odpowiednim przedziale.</p>
 </div>
 <div id="interpretacja-graficzna" class="section level2">
 <h2>Interpretacja graficzna</h2>
@@ -532,21 +533,21 @@ new2&lt;-data.frame( youtube = yt, facebook=fb, newspaper=np )
 pred2p&lt;-predict(model, new2, interval = &quot;prediction&quot;)
 head(pred2p)</code></pre>
 <pre><code>##        fit       lwr      upr
-## 1 13.03725  8.852794 17.22170
-## 2 12.92288  8.844905 17.00085
-## 3 15.19607 11.127876 19.26427
-## 4 14.29830 10.106414 18.49019
-## 5 17.82870 13.798408 21.85899
-## 6 18.25185 14.107676 22.39602</code></pre>
+## 1 17.20274 13.147775 21.25771
+## 2 10.82681  6.786681 14.86694
+## 3 17.71159 13.642564 21.78062
+## 4 10.53296  6.335932 14.72998
+## 5 21.24208 17.109209 25.37496
+## 6 16.00145 11.939747 20.06315</code></pre>
 <pre class="r"><code>pred2c&lt;-predict(model, new2, interval = &quot;confidence&quot;)
 head(pred2c)</code></pre>
-<pre><code>##        fit      lwr      upr
-## 1 13.03725 11.77293 14.30156
-## 2 12.92288 12.07510 13.77066
-## 3 15.19607 14.39665 15.99549
-## 4 14.29830 13.00959 15.58702
-## 5 17.82870 17.25240 18.40500
-## 6 18.25185 17.12800 19.37570</code></pre>
+<pre><code>##        fit       lwr      upr
+## 1 17.20274 16.473612 17.93188
+## 2 10.82681 10.185320 11.46830
+## 3 17.71159 16.907944 18.51524
+## 4 10.53296  9.227633 11.83828
+## 5 21.24208 20.160645 22.32352
+## 6 16.00145 15.235767 16.76713</code></pre>
 <pre class="r"><code>plot(pred2c[,1], ylab=&quot;&quot;, ylim=c(min(pred2p[,2]), max(pred2p[,3])), pch=20)
 lines(pred2c[,2], col=&quot;blue&quot;, lty=2)
 lines(pred2p[,2], col=&quot;red&quot;, lty=3)
