--- a/index.html
+++ b/index.html
@@ -297,10 +297,40 @@ $(document).ready(function () {
       <a href="modelliniowygrafika.html">Model liniowy - grafika</a>
     </li>
     <li>
+      <a href="alternatywnemodeleliniowe.html">Alternatywne modele liniowe</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Dzień 2
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
       <a href="modelliniowyprognozowanie.html">Model liniowy - prognozowanie</a>
     </li>
     <li>
-      <a href="alternatywnemodeleliniowe.html">Alternatywne modele liniowe</a>
+      <a href="modelnieliniowylm.html">Model nieliniowy - lm</a>
+    </li>
+    <li>
+      <a href="modelnieliniowynls.html">Model nieliniowy - nls</a>
+    </li>
+    <li>
+      <a href="regresjacw.html">Regresja - ćw</a>
+    </li>
+    <li>
+      <a href="analizawariancji.html">Analiza wariancji</a>
+    </li>
+    <li>
+      <a href="analizawariancjiaov.html">Analiza wariancji - aov</a>
+    </li>
+    <li>
+      <a href="tablicaanalizywariancjianova.html">Tablica analizy wariancji - anova</a>
+    </li>
+    <li>
+      <a href="curvefitting.html">Curve fitting</a>
     </li>
   </ul>
 </li>
