--- a/modelnieliniowylm.html
+++ b/modelnieliniowylm.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Dzień 1 - Regresja wielowymiarowa</title>
+<title>Dzień 2 - Model nieliniowy - lm</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -428,7 +428,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Dzień 1 - Regresja wielowymiarowa</h1>
+<h1 class="title toc-ignore">Dzień 2 - Model nieliniowy - lm</h1>
 
 </div>
 
@@ -447,87 +447,99 @@ div.tocify {
 }
 
 </style>
-<div id="regresja-wielowymiarowa" class="section level1">
-<h1>Regresja wielowymiarowa</h1>
-<p><strong>Regresja</strong> - metoda statystyczna pozwalająca na badanie związku pomiędzy wielkościami danych. Celem regresji wielowymiarowej jest ilościowe ujęcie związków pomiędzy wieloma zmiennymi niezależnymi (objaśniającymi, czynnikami) a zmienną zależną (kryterialną, objaśnianą, odpowiedzią).</p>
-<p>W ogólności badać współzależność zmiennych możemy na cztery różne sposoby:</p>
-<ul>
-<li>Zmienna zależna jednowymiarowa oraz jedna zmienna niezależna.</li>
-<li>Zmienna zależna jednowymiarowa oraz wiele zmiennych niezależnych.</li>
-<li>Zmienna zależna wielowymiarowa oraz jedna zmienna niezależna.</li>
-<li>Zmienna zależna wielowymiarowa oraz wiele zmiennych niezależnych.</li>
-</ul>
-<p>Przykłady regresji wielowymiarowej:</p>
-<ul>
-<li><p>Wytrzymałość betonu zależy od składników użytych przy jego produkcji. Pytanie: W jakiej proporcji stosować te składniki, by wytrzymałość była największa?</p></li>
-<li><p>Cena mieszkania zależy od…. Pytanie: jak udział poszczególnych elementów wpływa na to, aby cena rynkowa była najwyższa?</p></li>
-<li><p>Udzielenie kredytu zależy od …. Pytanie: jak udział poszczególnych elementów wpływa na decyzję o przyznaniu lub nie kredytu? <em>czy to na pewno regresja?</em></p></li>
-</ul>
-<p>W ujęcie “naukowym”, badania statystyczne mają w ogólności wyjaśniać zależności pomiędzy różnymi cechami badanej populacji.</p>
-<p>Cele badań w analizie regresji:</p>
-<ul>
-<li>Scharakteryzowanie relacji (między innymi jej zasięgu, kierunku i siły).</li>
-<li>Określenie modelu matematycznego, który w najbardziej wiarygodny sposób oddaje zachowanie się odpowiedzi (innymi słowy, znalezienie odpowiedniej funkcji, która może być później wykorzystana do predykcji).</li>
-<li>Określenie, które ze zmiennych objaśniających są ważne w analizie współzależności i uszeregowanie tych zmiennych ze względu na siłę wpływu na zmienną objaśnianą.</li>
-<li>Porównywanie różnych modeli dla jednej zmiennej objaśnianej, tzn. porównanie modeli, które składają się z różnych zestawów zmiennych objaśniających.</li>
-<li>Określenie interakcji zmiennych objaśniających oraz (przy dwukierunkowej zależności) określenie zależności zmiennych objaśniających od zmiennej objaśnianej.</li>
-<li>Oszacowanie punktowe wartości współczynników regresji (kierunek i siła współzależności oraz istotność statystyczna parametrów wprowadzonych do modelu).</li>
-</ul>
-<p>Uzyskiwane wyniki należy zweryfikować pod kątem następujących kryteriów:</p>
-<ul>
-<li>Określenie logicznego związku pomiędzy zmiennymi, tzn. sprawdzenie czy uzyskane wyniki nie kolidują z naturą zjawiska.</li>
-<li>Sprawdzenie czy przyczyna poprzedza w czasie skutek.</li>
-<li>Analiza siły związku pomiędzy zmiennymi np. wysoka korelacja między zmiennymi, które w rzeczywistości nie oddziałują na siebie.</li>
-<li>Sprawdzenie czy otrzymany model sprawdza się w rzeczywistości.</li>
-<li>Spójności wyników.</li>
-<li>Określenie zgodności wyników z wiedzą teoretyczną oraz doświadczalną.</li>
-<li>Rozpatrzenie możliwości otrzymania badanego skutku, jako przejawu działania różnych przyczyn oraz możliwości wystąpienia kilku skutków jednej przyczyny.</li>
-</ul>
-<p>Najczęściej stosowane funkcje w analizie regresji:</p>
-<ul>
-<li>funkcja liniowa <span class="math inline">\(f(x)=ax+b\)</span>,</li>
-<li>funkcja wielomianowa, np. kwadratowa <span class="math inline">\(f(x)=ax^2+bx+c\)</span>,</li>
-<li>funkcja logarytmiczna <span class="math inline">\(f(x) = \ln x\)</span>,</li>
-<li>funkcja eksponencjalna <span class="math inline">\(f(x)=e^{-x}\)</span>,</li>
-<li>funkcja logistyczna <span class="math inline">\(f(x) = \frac{1}{1+e^{-x}}\)</span>.</li>
-</ul>
-<p><strong><em>Wybór metody współzależności wielu zmiennych:</em></strong></p>
+<div id="model-nieliniowy---lm" class="section level1">
+<h1>Model nieliniowy - lm</h1>
+<p>Funkcja <code>lm</code> możemy być użyta również do “nieliniowych” modeli. Warto zwrócić uwagę, że symbol <code>+</code> był używany w niestandardowym kontekście.</p>
 <table>
 <thead>
 <tr class="header">
-<th>Metoda analizy</th>
-<th>Zmienna objaśniana</th>
-<th>Zmienne objaśniające</th>
+<th>Symbol</th>
+<th>Przykład</th>
+<th>Znaczenie</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Regresja wieloraka</td>
-<td>ciągła</td>
-<td>ciągłe (dopuszcza się także dyskretne)</td>
+<td><code>+</code></td>
+<td><code>+X</code></td>
+<td>dodawanie zmiennej</td>
 </tr>
 <tr class="even">
-<td>Analiza wariancji</td>
-<td>ciągła</td>
-<td>jakościowe</td>
+<td><code>-</code></td>
+<td><code>-X</code></td>
+<td>usunięcie zmiennej</td>
 </tr>
 <tr class="odd">
-<td>Analiza kowariancji</td>
-<td>ciągła</td>
-<td>jakościowe (symboliczne) i ciągłe</td>
+<td><code>:</code></td>
+<td><code>X:Y</code></td>
+<td>dodanie interakcji pomiędzy zmiennymi</td>
 </tr>
 <tr class="even">
-<td>Regresja Poissona</td>
-<td>dyskretna</td>
-<td>różne typy</td>
+<td><code>*</code></td>
+<td><code>X*Y</code></td>
+<td>dodanie obu zmiennych i interakcji pomiędzy zmiennymi</td>
 </tr>
 <tr class="odd">
-<td>Regresja logistyczna</td>
-<td>dwuwartościowa</td>
-<td>różne typy</td>
+<td><code>|</code></td>
+<td><code>X|Y</code></td>
+<td>warunkowość: dodanie zmiennej <span class="math inline">\(X\)</span> pod warunkiem <span class="math inline">\(Y\)</span></td>
+</tr>
+<tr class="even">
+<td><code>^</code></td>
+<td><code>(X + Y + Z)^3</code></td>
+<td>dodanie wszystkich zmiennych i interakcji między nimi</td>
+</tr>
+<tr class="odd">
+<td><code>I</code></td>
+<td><code>I(X*Y)</code></td>
+<td>dosłownie jak jest: dodanie np. mnożenia dwóch zmiennych</td>
+</tr>
+<tr class="even">
+<td><code>1</code></td>
+<td><code>X-1</code></td>
+<td>usunięcie stałej (współczynnika wolnego) z modelu</td>
+</tr>
+<tr class="odd">
+<td><code>log</code></td>
+<td><code>log(x)</code></td>
+<td>użycie logarytmu zmiennej (nie mylić z regresją logistyczną!)</td>
 </tr>
 </tbody>
 </table>
+<p>Przykład:</p>
+<ul>
+<li>wyrażenia:</li>
+</ul>
+<pre><code>Y ~ X + Z + W + X:Z + X:W + Z:W + X:Z:W
+Y ~ X * Z * W
+Y ~ (X + Z + W)^3</code></pre>
+<p>reprezentują tą samą zmienną</p>
+<p><span class="math display">\[Y_i=\beta_0 + \beta_1 X_i+\beta_2 Z_i +\beta_3 W_i+\beta_4X_iZ_i +\beta_5 X_iW_i+\beta_6 Z_iW_i+\beta_7X_iZ_iW_i+\varepsilon\]</span></p>
+<p>Jeśli mamy regresję “wielomianową” <span class="math display">\[ y = \beta_0 + \beta_1X+\beta_2X^2+\beta_3X^3 + \varepsilon ,\]</span> możemy np. dla stopnia trzeciego wyrażyć ją następująco na dwa sposoby:</p>
+<pre><code>y ~ poly(x,3, raw=TRUE)
+y ~ x + I(x^2) + I(x^3)</code></pre>
+<p>Uwaga: w przypadku modelu z funkcją eksponencjalną w razie problemów można z własności: <span class="math display">\[y = e^{a+bx} \quad  \Longleftrightarrow\ \quad log(y) = a + bx.\]</span></p>
+<p><strong>Ćwiczenie:</strong></p>
+<ol style="list-style-type: decimal">
+<li>Załaduj ramkę <code>marketing</code> jak wcześniej. Niech</li>
+</ol>
+<pre><code>y&lt;-marketing$sales
+x&lt;-marketing$youtube</code></pre>
+<p>Sprawdź podsumowania modeli:</p>
+<pre><code>y ~ poly(x,3, raw=TRUE)
+y ~ x + I(x^2) + I(x^3)
+y ~ poly(x,3)</code></pre>
+<ol start="2" style="list-style-type: decimal">
+<li>Załaduj ramkę <code>marketing</code> jak wcześniej. Niech</li>
+</ol>
+<pre><code>y&lt;-marketing$sales
+x&lt;-marketing$youtube
+x2&lt;-marketing$facebook
+z&lt;-x*x2</code></pre>
+<p>Sprawdź podsumowania modeli:</p>
+<pre><code>y ~ x:x2
+y ~ x*x2
+y ~ z</code></pre>
 </div>
 </div>
 
