--- a/sprawyorganizacyjne.html
+++ b/sprawyorganizacyjne.html
@@ -379,10 +379,40 @@ div.tocify {
       <a href="modelliniowygrafika.html">Model liniowy - grafika</a>
     </li>
     <li>
+      <a href="alternatywnemodeleliniowe.html">Alternatywne modele liniowe</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Dzień 2
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
       <a href="modelliniowyprognozowanie.html">Model liniowy - prognozowanie</a>
     </li>
     <li>
-      <a href="alternatywnemodeleliniowe.html">Alternatywne modele liniowe</a>
+      <a href="modelnieliniowylm.html">Model nieliniowy - lm</a>
+    </li>
+    <li>
+      <a href="modelnieliniowynls.html">Model nieliniowy - nls</a>
+    </li>
+    <li>
+      <a href="regresjacw.html">Regresja - ćw</a>
+    </li>
+    <li>
+      <a href="analizawariancji.html">Analiza wariancji</a>
+    </li>
+    <li>
+      <a href="analizawariancjiaov.html">Analiza wariancji - aov</a>
+    </li>
+    <li>
+      <a href="tablicaanalizywariancjianova.html">Tablica analizy wariancji - anova</a>
+    </li>
+    <li>
+      <a href="curvefitting.html">Curve fitting</a>
     </li>
   </ul>
 </li>
@@ -422,7 +452,7 @@ div.tocify {
 <ul>
 <li>Liczba godzin: 6 godz. (wykład) + 8 godz. (ćwiczenia).</li>
 <li>Liczba punktów ECTS: 2.</li>
-<li>Forma zaliczenia: zaliczenie na ocenę.</li>
+<li>Forma zaliczenia: zaliczenie.</li>
 <li>Konsultacje: informacje są dostępne są na stronie www w domenie wmii.</li>
 </ul>
 <div id="treści-zajęć" class="section level2">
